<resources>
    <string name="item_detail">Item detail</string>

    <string name="app_name">Cluj-Napoca Tour Guide App</string>
    <string name="cluj_city">Cluj-Napoca, Romania</string>
    <string name="cluj_description">Cluj-Napoca, a city in northwestern Romania, is the unofficial
        capital of the Transylvania region. It is home to universities, vibrant nightlife and
        landmarks dating to Saxon and Hungarian rule.</string>
    <string name="start_tour">Start Tour</string>
    <string name="category_1">Restaurants</string>
    <string name="category_2">Museums</string>
    <string name="category_3">Tours</string>
    <string name="category_4">Parks</string>
    <string name="address">Address: </string>
    <string name="type">Type: </string>
    <string name="program">Program: </string>
    <string name="phone">Phone: </string>
    <string name="visiting_hours">Hours: </string>
    <string name="web">Web: </string>
    <string name="email">Email: </string>
    <string name="price">Price: </string>
    <string name="no_web">No web address</string>
    <string name="no_address">Unknown address</string>
    <string name="no_mail">No email address</string>
    <string name="no_phone">No phone number</string>
    <string name="no_hours">Unknown hours</string>
    <string name="no_price">Unknown price</string>
    <string name="unknown_duration">Unknown duration</string>
    <string name="no_depart_time">Unknown departure time</string>
    <string name="no_depart_point">Unknown departure point</string>
    <string name="no_highlights">It\'s a surprise</string>
    <string name="depart_point">Departure point:</string>
    <string name="depart_time">Departure time:</string>
    <string name="duration">Duration:</string>
    <string name="highlights">Highlights:</string>
    <string name="tour_details">Touch to view more details about this tour</string>
    <string name="park_details">Touch to view more details about this park</string>
    <string name="hours">hours</string>
    <string name="unknown_name">Unknown name</string>
    <string name="open_map">Open location on map</string>
    <string name="map">Map</string>
    <string name="maps_google_com">http://maps.google.com/maps?q=loc:</string>
</resources>
