<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    android:padding="@dimen/padding_m"
    tools:context=".CategoryActivity">

    <TextView
        android:id="@+id/park_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_font_size_l"
        tools:text="park Name"
        tools:textColor="@color/colorPrimary" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/park_name"
        android:layout_marginBottom="@dimen/margin_s"
        android:background="@android:color/white"
        tools:background="@color/colorPrimary" />

    <ImageView
        android:id="@+id/park_image"
        android:layout_width="100dp"
        android:layout_height="134dp"
        android:layout_below="@id/separator"
        android:layout_marginEnd="@dimen/margin_s"
        tools:src="@drawable/default_image_thumb" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator"
        android:layout_toEndOf="@id/park_image"
        android:text="@string/address"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/park_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/separator"
        android:maxEms="12"
        android:textColor="@android:color/white"
        tools:text="park Address"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/park_address"
        android:layout_toEndOf="@id/park_image"
        android:text="@string/visiting_hours"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/park_visiting_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/park_address"
        android:maxEms="13"
        android:text="@string/no_hours"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/park_visiting_hours"
        android:layout_toEndOf="@id/park_image"
        android:text="@string/web"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/park_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/park_visiting_hours"
        android:autoLink="web"
        android:maxEms="13"
        android:text="@string/no_web"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/park_web"
        android:layout_toEndOf="@id/park_image"
        android:text="@string/email"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/park_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/park_web"
        android:autoLink="email"
        android:maxEms="13"
        android:text="@string/no_mail"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/park_mail"
        android:layout_toEndOf="@id/park_image"
        android:text="@string/phone"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/park_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/park_mail"
        android:autoLink="phone"
        android:text="@string/no_phone"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/park_image"
        android:autoLink="phone"
        android:text="@string/park_details"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        tools:textColor="@color/colorPrimary" />

</RelativeLayout>